<resources>
    <string name="app_name">Little Video Diary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Source</string>
    <string name="take_a_new_video">Take a new video!</string>
    <string name="sync_with_server">Refresh!</string>
    <string name="video_list">Video List</string>
    <string name="title_activity_video_details">New Video</string>
    <string name="video_size">Size</string>
    <string name="fil_location" />
    <string name="file_location">Location</string>
    <string name="Stars" >Stars!</string>
    <string name="start_playing">Play video!</string>
    <string name="stop_playing">Stop</string>
    <string name="upload_video">Upload video now!</string>
    <string name="title_activity_edit_video_details">Edit Video Details</string>
    <string name="download_video">Download video</string>
    <string name="remove_video">Delete Video from Local store</string>
    <string name="no_vid">Sorry, this video does not exist locally. Please download it from Server.</string>
    <string name="menu_add_video">Add Video</string>
    <string name="no_vids">Sorry no videos founds.</string>
    <string name="new_vid_title">Title</string>
    <string name="vid_description">Description</string>
    <string name="store_locally">Store Video Locally</string>
    <string name="store_in_cloud">Store Locally and upload!</string>
    <string name="remove_vid">Delete Video</string>
    <string name="marked_removal">Video has been marked for removal.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="del_video">Delete video</string>
    <string name="sure_to_remove">Are you sure to delete video?</string>
    <string name="title_not_set">Title is not provided</string>
    <string name="sure_to_continue">Are you sure to continue?</string>
    <string name="title_more_than_allowed">Title has more characters</string>
    <string name="sorry_there_is_a_problem">Sorry there was a problem uploading video.</string>
</resources>
